# saris

./: .bumpversion.cfg  .dockerignore  .gitignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE  README.md  poetry.toml  pyproject.toml  pyproject_docker.toml  requirements.txt  run_drl_L_hallway_1.sh  run_drl_L_hallway_2.sh  run_drl_L_hallway_calql.sh  run_drl_L_hallway_poetry_1.sh  run_drl_L_hallway_poetry_2.sh  run_drl_L_hallway_poetry_calql.sh  run_drl_L_hallway_poetry_calql_torchcompile.sh  run_drl_L_hallway_poetry_focal.sh  run_drl_L_hallway_poetry_sac.sh  run_t_wireless_static.sh  run_torchcompile.sh  run_wireless_moving.sh  run_wireless_static.sh  setup.py  tasks.py
.github/: ISSUE_TEMPLATE.md
configs/: drl_L_hallway.yaml  drl_L_hallway_1.yaml  drl_L_hallway_2.yaml  sionna_L_hallway.yaml  sionna_L_hallway_1.yaml  sionna_L_hallway_2.yaml  sionna_L_multi_users.yaml  sionna_T_multi_users.yaml
docs/: conf.py  index.md  installation.md  usage.md
notebooks/: channel.ipynb  example.ipynb  transfer_weights.ipynb
saris/: __init__.py  cli.py  cli_sac.py  examine_focal.py  examine_focal_pts.py  run_calql.py  run_calql_python.py  run_calql_torchcompile.py  run_sac_torchcompile.py  run_t_hallway.py  sac_torchcompile.py  train_calql.py  train_calql_torchcompile.py  train_sac.py  train_sac_torchcompile.py  train_t_sac.py
saris/blender_script/: README.md  bl_drl.py  bl_drl_T_hallway.py  bl_focal_pts.py  bl_parser.py  bl_utils.py  hallway.py  install_mitsuba_addon.py  modify_config.py  shared_utils.py
saris/compute/: coverage_map.py  signal_cmap.py
saris/distributions/: __init__.py  bijector.py  conversion.py  distribution.py  independent.py  jittable.py  lambda_bijector.py  normal.py  sigmoid.py  tanh.py  transformations.py  transformed.py
saris/drl/agents/: actor_critic.py  calql.py  calql_simplified.py  ppo_agent.py  sac.py
saris/drl/envs/: __init__.py
saris/drl/envs/focal/: __init__.py  wireless_focal_pts.py
saris/drl/envs/wireless/: __init__.py  wireless_rec_v0.py  wireless_v0.py  wireless_v0_backup.py
saris/drl/envs/wireless_T_static/: __init__.py  wireless_T_static_v0.py
saris/drl/envs/wireless_moving/: __init__.py  wireless_moving_v0.py
saris/drl/infrastructure/: replay_buffer.py  train_state.py
saris/drl/networks/: actor.py  alpha.py  common_blocks.py  critic.py  mlp.py  network_utils.py  policies.py
saris/drl/trainers/: __init__.py  ac_trainer.py  actor_trainer.py  autoencoder_trainer.py  critic_trainer.py  evaluator.py  evolved_latent_trainer.py  sac_trainer.py  trainer_module copy.py  trainer_module.py
saris/sigmap/: __init__.py  engine.py  signal_cmap.py
saris/sub_tasks/: calc_pathgain.py
saris/utils/: buffers.py  cudagraphs.py  load_data.py  logger.py  map_prep.py  mp_imp.py  pytorch_utils.py  rollout.py  running_mean.py  timer.py  torch_utils.py  utils.py
tests/: __init__.py  test_saris.py
