[tool]
[tool.poetry]
name = "saris"
version = "0.1.0"
homepage = "https://github.com/hieutrungle/saris"
description = "Top-level package for saris."
authors = ["Hieu Le <hieu.tg.le@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [{ include = "saris" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorboardx = ">=2.6"
swig = ">=4.2"
gymnasium = ">=0.29"
orbax-checkpoint = ">0.4,<0.7"
jax = { version = ">=0.4.28", extras = ["cuda12"] }
flax = ">=0.8"
sionna = ">=0.15,<0.19"
tensorflow = { version = ">=2.13,<2.16", extras = ["and-cuda"] }

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"
scipy = ">=1.14"
matplotlib = ">=3.9"
ipykernel = "^6.29.5"
numpy = ">=2.0.0"
tqdm = ">=4.66"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
main = 'saris.cli:main'
