[tool]
[tool.poetry]
name = "saris"
version = "0.1.0"
homepage = "https://github.com/hieutrungle/saris"
description = "Top-level package for saris."
authors = ["Hieu Le <hieu.tg.le@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [{ include = "saris" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorboardx = ">=2.6"
swig = ">=4.2"
gymnasium = ">=0.29"
sionna = ">=0.15,<0.19"
tensorflow = { version = ">=2.13,<2.14", extras = ["and-cuda"] }
pyyaml = "^6.0.2"
torchinfo = "^1.8.0"
torch = ">=2.0"
torchvision = ">=0.10"
torchaudio = ">=2.0"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
ipykernel = "^6.29.5"
numpy = "<2.0.0"
tqdm = "^4.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
main = 'saris.cli:main'
