[tool]
[tool.poetry]
name = "saris"
version = "0.1.0"
homepage = "https://github.com/hieutrungle/saris"
description = "Top-level package for saris."
authors = ["Hieu Le <hieu.tg.le@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
packages = [{ include = "saris" }, { include = "tests", format = "sdist" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tensorboardx = ">=2.6"
swig = ">=4.2"
gymnasium = ">=0.29"
torchinfo = "^1.8.0"
torch = "=2.1.2"
torchvision = "=0.16.2"
torchaudio = "=2.1.2"
sionna = "=0.18.0"
tensorflow = { version = "=2.14.1", extras = ["and-cuda"] }
tensorrt = "=8.5.3.1"
pyyaml = "^6.0.2"
tyro = "^0.8.10"
stable-baselines3 = { extras = ["extra"], version = "^2.3.2" }
pyrallis = "^0.3.1"
wandb = "^0.18.1"
pipreqs = "^0.5.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
ipykernel = "^6.29.5"
numpy = "<2.0.0"
tqdm = "^4.0"


[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.isort]
profile = "black"

[tool.poetry.scripts]
main = 'saris.cli:main'
train_sac = 'saris.train_sac:main'
train_calql = 'saris.train_calql:main'
examine_focal = 'saris.examine_focal:main'
run_calql = 'saris.run_calql:main'
